--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ body {
     background-color: #adf7db;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
+    ;
 }
 
 .form-group {
@@ -155,6 +156,7 @@ document.onkeydown = function (e) {
         return false;
     } else {
         return true;
+    }}
 </script>
 
 </body>
